# better-face-tracking

./: .gitignore  better-face-tracking.spec  build_local.sh  config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
assets/: generate_icon.py
src/: canon_api.py  face_detector.py  ndi_receiver.py  pid.py  rtsp_receiver.py  tracker.py
src/ui/: main_window.py  settings_dialog.py  video_widget.py
